tests/ui/bad-field-names.rs
use boolenum::BoolEnum;

#[derive(BoolEnum)]
pub enum FieldNames {
    Foo,
    Bar,
}

fn main() {}
